# LCS_Project

./: .gitignore  CMakeLists.txt
include/: BFSTraversal.h  DFSTraversal.h  Engine.h  Matrix.h  ReadInput.h  TraversalArray.h  Validations.h
src/: BFSTraversal.c  DFSTraversal.c  Engine.c  Matrix.c  ReadInput.c  TraversalArray.c  Validations.c  main.c
tests/: test_5  test_6  test_8
